--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
     "buffercursor": "^0.0.12",
     "cap": "^0.2.1",
     "electron": "^23.2.0",
-    "npcap": "file:../node_pcap",
-    "photon-packet-parser": "file:photon-packet-parser"
+    "node-addon-api": "^6.0.0",
+    "npcap": "file:./node_pcap",
+    "photon-packet-parser": "file:./photon-packet-parser"
   },
   "scripts": {
     "start": "electron ."
