--- a/package.json
+++ b/package.json
@@ -1,14 +1,34 @@
 {
   "dependencies": {
+    "electron-builder-squirrel-windows": "^24.2.0",
+    "html-webpack-plugin": "^5.5.0",
     "node-addon-api": "^6.0.0",
     "npcap": "file:./node_pcap",
-    "photon-packet-parser": "file:./photon-packet-parser"
+    "photon-packet-parser": "file:./photon-packet-parser",
+    "webpack": "^5.78.0",
+    "webpack-cli": "^5.0.1",
+    "webpack-dev-server": "^4.13.2"
   },
   "scripts": {
-    "start": "electron ."
+    "start": "electron .",
+    "build": "electron-builder"
   },
   "main": "main.js",
   "devDependencies": {
-    "electron": "^23.2.0"
-  }
+    "electron": "^23.2.0",
+    "electron-builder": "^23.6.0"
+  },
+  "build": {
+    "productName": "Tradar",
+    "appId": "com.tisoz.tradar",
+    "icon": "icon_512.png",
+    "directories": {
+      "output": "build"
+    },
+    "win": {
+      "target": "nsis"
+    }
+  },
+  "version": "1.0.0",
+  "name": "Tradar"
 }
